Correctly align icon and message in error box

--- a/apps/user/styles/style.css
+++ b/apps/user/styles/style.css
@@ -26,11 +26,12 @@ div.app-user div.errors {
 div.app-user div.errors .fa {
   font-size: 3em;
   display: inline-block;
+  vertical-align: middle;
 }
 
 div.app-user div.errors ul {
   display: inline-block;
-  vertical-align: top;
+  vertical-align: middle;
   list-style: none;
   margin: 0;
   margin-left: 20px;
